Revision history for Datahub-Factory

{{$NEXT}}

    - Fixed: missing --number documentation in README.
    - Fixed: Add missing Module::Build to make Travis happy.
    - Fixed: Added missing prereq as suggested by CPANTS.

1.75  2019-07-15 17:09:34 CEST

    - Fixed: Error output for Solr indexer without Perl errors.
    - Added: missing Catmandu::DBI dependency
    - Fixed: all errors now prefixed with item_id for improved logging. 

1.74  2018-09-03 14:11:03 CEST

    - Added: Datahub::Factory::FixFileNotFound error.
    - Added: Datahub::Factory::InvalidCondition error.
    - Fixed: fixes #62 fixer Fix throws an error file_name is undefined
    - Added: fixes #61 break after finite number of records in transport.
    - Fixed: issue #60 concatenation error when a HTTP error is thrown.
    - Fixed: issue #59 Error when adding only one fixer when Fix plugin is used.
    - Added: support display parameter for Catmandu::CA.

1.73  2017-11-30 12:03:28 CET

    - Changed: added a General block to the configuration.
    - Changed: added splitted configuration files.
    - Fixed: indexer throws an ugly perl error for Catmandu::HTTPError.
    - Changed: generate README.md from separate POD documentation.
    - Proposed fix for missing prereqs as reported by CPANTS.
    - Fixed #51: Non-existing pipeline.ini should return proper error message. 
    - Added: documentation for the Datahub::Factory::Flash command.
    - Added: documentation for the Index command.

1.72  2017-10-06 15:19:32 CEST

    - Changed: removed conf folder.
    - Changed: removed documentation folder.
    - Added: .perltidyrc and .tidyallrc
    - Changed: flexible configuration based on a local datahubfactory.yml file.
    - Changed: fixes #48 Log4perl throws forgot to call init() error.
    - Changed: processing the output of the Solr indexer. Added error handling.
    - Added: dhconveyor index command with a basic Solr indexer.